# woodcutter

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.md  README.md  THIRD_PARTY_NOTICES.md  cleanup.sh  docker_setup.sh
src/: _exact_protected.txt  _lineartime_day.hpp  _lineartime_reductions_clusters.hpp  budget.hpp  columngeneration.hpp  core.hpp  cut_generation.hpp  harness_exact.hpp  harness_heuristic.hpp  harness_lowerbound.hpp  heur_params.hpp  heuristics.hpp  instance.hpp  io.hpp  maf_util.hpp  main.cpp  mast.hpp  mpmodel.hpp  preprocessing.hpp  reduction_rule_stack.hpp  solve.hpp
src/cuts/: set_packing_cuts.hpp
src/dependencies/: .gitignore  README.md
src/mast/: _centroid.hpp  lca.hpp  multi_dp.hpp  pricing.hpp  quad_dp.hpp  ranked.hpp  trees.hpp
